# nextjs-fastapi-monorepo-template

./: .gitignore  README.md  docker-compose.yml  package.json  更新说明.md  项目功能总结与改进方向.md
apps/api/: .env.template  DEVELOPMENT_GUIDELINES.md  README.md  alembic.ini  main.py  pyproject.toml  pytest.ini  run.py  run_tests.py  setup_test_db.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 2025_04_18_2158-bef9b531dd7c_create_user_table.py
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: __init__.py
apps/api/app/api/v1/endpoints/: auth.py  cache_demo.py  health.py  users.py
apps/api/app/core/: config.py  db.py  exception_handlers.py  exceptions.py  logging.py  middleware.py  redis_cache.py  security.py  token_blacklist.py
apps/api/app/models/: user.py
apps/api/app/repositories/interfaces/: user_interface.py
apps/api/app/repositories/sql/: user_repository.py
apps/api/app/schemas/: auth.py  token.py  user.py
apps/api/app/services/: user_service.py
apps/api/scripts/: generate_openapi_schema.py
apps/api/tests/: README.md  conftest.py  test_db.py
apps/api/tests/api/v1/: test_auth.py  test_auth_logout.py  test_users.py
apps/api/tests/core/: __init__.py  test_redis_cache.py  test_token_blacklist.py
apps/api/tests/fixtures/: __init__.py  auth.py  database.py  http_client.py  redis.py  users.py
apps/api/tests/repositories/: test_sql_user_repository.py
apps/api/tests/services/: test_user_service.py
apps/docs/: package.json
apps/web/: README.md  components.json  next.config.ts  package.json  postcss.config.mjs  (+3 more)
(+41 files in other folders)
